--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
 <body>
     <center>
-        <h1>  Welcome to India </h1>
+        <h1>  Welcome to Matrix </h1>
         <h2>  Github </h2>
         <button> Click here </button>
     </center>
