--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     </head>
 <body>
     <center>
-        <h1>  Welcome to Matrix </h1>
-        <h2>  Github </h2>
-        <button> Click here </button>
+        <h1>  Welcome to Trainer </h1>
     </center>
 </body>
 </html>
