--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title> welcome </title>
+        <title> welcome to My Profile </title>
     </head>
 <body>
     <center>
-        <h1>  Welcome to Trainer </h1>
+        <h1>  This is My Profile </h1>
+        <h2>  This is trainer </h2>
     </center>
 </body>
 </html>
