--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <center>
         <h1>  This is My Profile </h1>
-        <h2>  This is trainer </h2>
+        <h2>  This is Trainer </h2>
     </center>
 </body>
 </html>
